--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,9 @@ dependencies:
   ionicons: ^0.2.2
   image_picker: ^1.1.2
   uuid: ^4.5.1
+  speech_to_text: ^7.0.0
+  flutter_barcode_scanner: ^2.0.0
+  mobile_scanner: ^6.0.2
   # firebase_core: ^2.24.2
   # firebase_auth: ^4.15.3
   # cloud_firestore: ^4.13.6
